# OmniSMS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  omniSMS_codex_prompt.md
.github/workflows/: ci.yml
core/: CMakeLists.txt
core/include/omnisms/: admin.h  call.h  config.h  crypto.h  email.h  hal.h  inbox.h  pdu.h  phone.h  push.h  queue.h  rules.h  scheduler.h  sms.h  text.h
core/src/: admin.cpp  call.cpp  config.cpp  crypto.cpp  email.cpp  inbox.cpp  pdu.cpp  phone.cpp  push.cpp  queue.cpp  rules.cpp  scheduler.cpp  text.cpp
docs/: config.schema.json  porting.md
docs/progress/: 2026-07-10-stage0.md  STATUS.md
ports/android/: README.md  settings.gradle.kts
ports/android/app/: build.gradle.kts  proguard-rules.pro
ports/android/app/src/main/: AndroidManifest.xml
ports/android/app/src/main/assets/: default_config.json
ports/android/app/src/main/cpp/: CMakeLists.txt  native_bridge.cpp
ports/android/app/src/main/res/drawable/: bg_card.xml  (+8 more)
ports/esp-idf/: CMakeLists.txt  README.md  sdkconfig.defaults
ports/esp-idf/code/web_src/panels/: diagnose.html
ports/esp-idf/components/idf_config/: CMakeLists.txt  idf_config.cpp
ports/esp-idf/components/idf_config/include/: idf_config.h
ports/esp-idf/components/idf_inbox/: CMakeLists.txt  idf_inbox.cpp
ports/esp-idf/components/idf_inbox/include/: idf_inbox.h
ports/esp-idf/components/idf_modem/: idf_modem.cpp
ports/esp-idf/components/idf_push/: CMakeLists.txt  idf_push.cpp
ports/esp-idf/components/idf_sms/: CMakeLists.txt  idf_sms.cpp
ports/esp-idf/components/idf_web/: CMakeLists.txt  idf_web.cpp
ports/esp-idf/components/idf_wifi/: idf_wifi.cpp
ports/esp-idf/components/omnisms_core/: CMakeLists.txt
ports/esp-idf/main/: Kconfig.projbuild
ports/esp-idf/preview/: index.html
ports/esp-idf/tools/: idf.ps1
ports/linux/: CMakeLists.txt  omnisms.conf.example  omnisms.json.example  omnisms.service
ports/linux/include/omnisms/linux/: at_channel.h  config_store.h  modem_backend.h  modem_driver.h  web_server.h
ports/linux/src/: at_channel.cpp  config_store.cpp  main.cpp  modem_backend.cpp  modem_driver.cpp  web_server.cpp
ports/linux/src/drivers/: generic_3gpp.cpp
ports/linux/tests/: fake_mmcli.cpp  minimal.json  minimal_modemmanager.json  test_config_store.cpp  test_modem_backend.cpp  test_modem_driver.cpp  test_web_server.cpp
ports/openwrt/: Makefile
ports/openwrt/files/: omnisms.conf  omnisms.init
tests/: CMakeLists.txt  test_admin.cpp  test_call.cpp  test_config.cpp  test_core.cpp  test_email.cpp  test_inbox.cpp  test_push.cpp  test_queue.cpp  test_rules.cpp  test_scheduler.cpp
webui/: README.md
(+25 files in other folders)
